SONAR-5718 Improve readability of issues list

--- a/server/sonar-web/src/main/less/components/code-source.less
+++ b/server/sonar-web/src/main/less/components/code-source.less
@@ -89,15 +89,4 @@
     padding: 1px 5px;
   }
 
-  .issue {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    opacity: 0.2;
-    .trans(opacity);
-
-    &:hover, &.selected {
-      opacity: 1;
-    }
-  }
-
 }
