--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -4,12 +4,12 @@
 
 @leftPadding: 10px;
 @rightPadding: 10px;
-@topPadding: 10px;
-@bottomPadding: 10px;
+@topPadding: 5px;
+@bottomPadding: 5px;
 
 
 .issue-list {
-  margin: 5px -5px;
+  margin: 5px;
   border-top: 1px solid @barBorderColor;
   border-bottom: 1px solid @barBorderColor;
 }
