--- a/server/sonar-web/src/main/less/issues.less
+++ b/server/sonar-web/src/main/less/issues.less
@@ -291,6 +291,11 @@
 
 .issues-workspace-list {
   padding: 0 5px;
+
+  .issue {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 
 .issues-workspace-list-more {
